Правки ТЗ (1)